# hodu

./: .env.cuda11.Dockerfile  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile.cuda11  LICENSE  README.md  README_0.3.0.md  ROADMAP_EN.md  ROADMAP_KO.md  TODOS.md
benchmarks/matmul/: Cargo.toml  README.md  _burn.rs  _candle.rs  _hodu.rs  _jax.py  _tensorflow.py  _torch.py  run.py
benchmarks/mlp/: Cargo.toml  _burn.rs  _candle.rs  _hodu.rs  _jax.py  _tensorflow.py  _torch.py
crates/hodu_core/: Cargo.toml  README.md
crates/hodu_core/src/: backends.rs  be_hodu.rs  builder.rs  capture.rs  compat.rs  einsum.rs  error.rs  executor.rs  flatten.rs  format.rs  lib.rs  op.rs  op_metadatas.rs  op_params.rs  ops.rs  prelude.rs  scalar.rs  script.rs  snapshot.rs  tensor.rs  types.rs
crates/hodu_cpu_kernels/: Cargo.toml  Makefile  README.md  __ops  build.rs  build_blas.rs  build_openblas.rs
crates/hodu_cpu_kernels/kernels/: atomic.h  constants.h  math_utils.h  ops_binary.c  ops_binary.h  ops_cast.c  ops_cast.h  ops_concat_split.c  ops_concat_split.h  ops_conv.c  ops_conv.h  ops_conv_blas_aarch64_apple_darwin.c  ops_conv_openblas.c  ops_einsum.c  ops_einsum.h  ops_indexing.c  ops_indexing.h  ops_linalg.c  ops_linalg.h  ops_matrix.c  ops_matrix.h  ops_matrix_blas_aarch64_apple_darwin.c  ops_matrix_openblas.c  ops_memory.c  ops_memory.h  ops_padding.c  ops_padding.h  ops_reduce.c  ops_reduce.h  ops_resize.c  ops_resize.h  ops_scan.c  ops_scan.h  ops_shape_memory.c  ops_shape_memory.h  ops_sort.c  ops_sort.h  ops_unary.c  ops_unary.h  ops_unary_blas_aarch64_apple_darwin.c  (+13 more)
crates/hodu_cpu_kernels/src/: error.rs  jit_symbols.rs  kernels.rs  lib.rs
crates/hodu_cpu_kernels/tests/: binary.rs  binary_mini_float.rs  concat_split.rs  conv.rs  indexing.rs  matrix.rs  ops_binary.rs  ops_binary_mini_float.rs  ops_concat_split.rs  ops_conv.rs  ops_einsum.rs  ops_indexing.rs  ops_linalg.rs  ops_matrix.rs  ops_padding.rs  ops_reduce.rs  ops_resize.rs  ops_scan.rs  ops_shape_memory.rs  ops_sort.rs  ops_unary.rs  ops_windowing.rs  reduce.rs  unary.rs  windowing.rs
crates/hodu_cuda_kernels/: Cargo.toml  README.md  build.rs
crates/hodu_cuda_kernels/kernels/: atomic.cuh  math.cuh  ops_binary.cu  ops_cast.cu  ops_concat_split.cu  ops_conv.cu  ops_einsum.cu  ops_indexing.cu  ops_linalg.cu  ops_matrix.cu  ops_memory.cu  ops_padding.cu  ops_reduce.cu  ops_resize.cu  ops_scan.cu  ops_shape_memory.cu  ops_sort.cu  ops_unary.cu  ops_windowing.cu  storage.cu  utils.cuh
crates/hodu_cuda_kernels/src/: compat.rs  cuda.rs  error.rs  kernel.rs  kernels.rs  lib.rs  source.rs
crates/hodu_cuda_kernels/tests/: ops_binary.rs  ops_cast.rs  ops_concat_split.rs  ops_conv.rs  ops_einsum.rs  ops_indexing.rs  ops_linalg.rs  ops_matrix.rs  ops_memory.rs  ops_padding.rs  ops_reduce.rs  ops_resize.rs  ops_scan.rs  ops_shape_memory.rs  ops_sort.rs  ops_unary.rs  ops_windowing.rs  storage.rs
crates/hodu_datasets/: Cargo.toml  README.md
crates/hodu_datasets/macros/: Cargo.toml  README.md
crates/hodu_datasets/src/: lib.rs  prelude.rs
crates/hodu_format/: Cargo.toml
crates/hodu_format/src/: format.rs  hdss.rs  hdt.rs  json.rs  lib.rs
crates/hodu_internal/: Cargo.toml  README.md
crates/hodu_internal/src/: lib.rs  plugin.rs  prelude.rs
crates/hodu_macro_utils/: Cargo.toml  README.md
crates/hodu_macro_utils/src/: manifest.rs
crates/hodu_metal_kernels/: Cargo.toml  Makefile  README.md  TODO.md  __ops
crates/hodu_metal_kernels/kernels/: atomic.metal  constants.metal  ops_binary.metal  ops_cast.metal  ops_concat_split.md  ops_concat_split.metal  ops_conv.metal  ops_einsum.metal  ops_indexing.metal  ops_linalg.metal  ops_matrix.metal  ops_memory.metal  ops_padding.metal  ops_reduce.metal  ops_resize.metal  ops_scan.metal  ops_shape_memory.metal  ops_sort.metal  ops_unary.metal  ops_windowing.metal  storage.metal
crates/hodu_metal_kernels/src/: dtype.rs  error.rs  kernel.rs  kernels.rs  lib.rs  source.rs  utils.rs
crates/hodu_metal_kernels/tests/: binary.rs  cast.rs  concat_split.rs  conv.rs  indexing.rs  matrix.rs  memory.rs  ops_binary.rs  ops_cast.rs  ops_concat_split.rs  ops_conv.rs  ops_einsum.rs  ops_indexing.rs  ops_linalg.rs  ops_matrix.rs  ops_memory.rs  ops_padding.rs  ops_reduce.rs  ops_resize.rs  ops_scan.rs  ops_shape_memory.rs  ops_sort.rs  ops_unary.rs  ops_windowing.rs  reduce.rs  storage.rs  unary.rs  windowing.rs
crates/hodu_nn/: Cargo.toml  README.md
crates/hodu_nn/macros/: Cargo.toml  README.md
crates/hodu_nn/src/: compat.rs  lib.rs  losses.rs  module.rs  modules.rs  optimizer.rs  optimizers.rs  prelude.rs
crates/hodu_onnx/: Cargo.toml  build.rs
crates/hodu_onnx/src/: export.rs  import.rs  lib.rs
crates/hodu_plugin/: Cargo.toml
crates/hodu_plugin/src/: artifact.rs  backend.rs  compiler.rs  error.rs  format.rs  interp.rs  lib.rs  manager.rs  output.rs  rpc.rs  runtime.rs  tensor.rs
crates/hodu_plugin/tests/: interp.rs
crates/hodu_plugin_runtime/: Cargo.toml
crates/hodu_plugin_sdk/: Cargo.toml  build.rs
crates/hodu_utils/: Cargo.toml  README.md
crates/hodu_utils/src/: data.rs  (+2 more)
hodu/: Cargo.toml  README.md
hodu-cli/: Cargo.toml  README.md
hodu-cli-plugin-sdk/macros/: Cargo.toml
hodu-cli/src/: cli.rs  commands.rs  lib.rs  main.rs  output.rs  plugins.rs  templates.rs  tensor.rs
hodu-lib/: Cargo.toml  README.md
hodu-plugin-sdk/: Cargo.toml  README.md  build.rs  new.sh
hodu-plugin-sdk-cargo/: Cargo.toml
hodu-plugin-sdk-cargo/src/: main.rs
hodu-plugin-sdk/macros/: Cargo.toml
hodu-plugin-sdk/src/: artifact.rs  backend.rs  build.rs  error.rs  format.rs  info.rs  lib.rs  rpc.rs  server.rs  tensor.rs
hodu-plugin-sdk/template/: Cargo.toml.template  manifest.backend.json  manifest.model_format.json  manifest.tensor_format.json
hodu/cli/: Cargo.toml  README.md
hodu/examples/: simple-linear-train-script.rs  simple-linear-train.rs
hodu/lib/: Cargo.toml  README.md
plugins/hodu-compiler-cpu/: Cargo.toml  build.rs
plugins/hodu-compiler-metal/: Cargo.toml  build.rs
plugins/hodu-runtime-cpu/: Cargo.toml
plugins/hodu-runtime-metal/: Cargo.toml
(+731 files in other folders)
