[workspace]
members = ["crates/*", "hodu-cli", "hodu-lib", "hodu-plugin-sdk"]
exclude = ["crates/hodu_cuda_kernels", "crates/hodu_metal_kernels"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.53" }
clap_complete = { version = "4.5.53" }
ctrlc = "3.5.1"
dashmap = "6.1.0"
dirs = { version = "6.0.0" }
float8 = { version = "0.5.0", features = ["num-traits", "rand_distr"] }
fs2 = "0.4.3"
half = { version = "2.7.1", features = ["num-traits", "rand_distr"] }
hex = "0.4.3"
hodu_core = { path = "crates/hodu_core", version = "0.2.4" }
hodu_cpu_kernels = { path = "crates/hodu_cpu_kernels", version = "0.2.4" }
hodu_cuda_kernels = { path = "crates/hodu_cuda_kernels", version = "0.2.4" }
hodu_datasets = { path = "crates/hodu_datasets", version = "0.2.4" }
hodu_datasets_macros = { path = "crates/hodu_datasets/macros", version = "0.2.4" }
hodu_internal = { path = "crates/hodu_internal", version = "0.2.4" }
hodu_macro_utils = { path = "crates/hodu_macro_utils", version = "0.2.4" }
hodu_metal_kernels = { path = "crates/hodu_metal_kernels", version = "0.2.4" }
hodu_nn = { path = "crates/hodu_nn", version = "0.2.4" }
hodu_nn_macros = { path = "crates/hodu_nn/macros", version = "0.2.4" }
hodu_plugin = { path = "crates/hodu_plugin", version = "0.1.0" }
num-traits = { version = "0.2.19" }
paste = "1.0.15"
postcard = { version = "1.1.3", features = ["alloc"] }
proc-macro2 = "1.0"
quote = "1.0"
rand = { version = "0.9.2" }
rand_distr = { version = "0.5.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_repr = "0.1.20"
sha2 = "0.10.9"
smallvec = { version = "1.15.1" }
syn = { version = "2.0", features = ["full"] }
toml = { version = "0.9.8" }
toml_edit = { version = "0.23.6", features = ["parse"] }
ureq = { version = "3.1.4" }
