[package]
name = "hodu-cli"
version = "0.1.0"
description = "Command-line interface for Hodu ML framework"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"

[[bin]]
name = "hodu"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
dirs = { workspace = true }
float8 = { workspace = true }
half = { workspace = true }
hodu-plugin-sdk = { path = "../hodu-plugin-sdk", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
