[package]
name = "hodu"
version = "0.2.4"
description = "A user-friendly ML framework built in Rust for rapid prototyping and embedded deployment"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"
documentation = "https://docs.rs/hodu"
readme = "README.md"
keywords = ["tensor", "machine-learning", "hodu"]
categories = ["science"]

[features]
default = ["std", "serde", "rayon"]
std = ["hodu_internal/std"]
serde = ["hodu_internal/serde"]
rayon = ["std", "hodu_internal/rayon"]

f8e5m2 = ["hodu_internal/f8e5m2"]
f64 = ["hodu_internal/f64"]
u16 = ["hodu_internal/u16"]
u64 = ["hodu_internal/u64"]
i16 = ["hodu_internal/i16"]
i64 = ["hodu_internal/i64"]

openblas = ["hodu_internal/openblas"]

cuda = ["hodu_internal/cuda"]
metal = ["std", "hodu_internal/metal"]

xla = ["std", "hodu_internal/xla"]

[dependencies]
hodu_internal = { workspace = true }
