[package]
name = "hodu"
version = "0.2.4"
description = "A user-friendly ML library built in Rust"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"
documentation = "https://docs.rs/hodu"
readme = "README.md"
keywords = ["tensor", "machine-learning", "hodu"]
categories = ["science"]

[features]
default = ["serde"]
serde = ["hodu_internal/serde"]

# optional dtype
f8e5m2 = ["hodu_internal/f8e5m2"]
f64 = ["hodu_internal/f64"]
u16 = ["hodu_internal/u16"]
u64 = ["hodu_internal/u64"]
i16 = ["hodu_internal/i16"]
i64 = ["hodu_internal/i64"]

# optional cpu accelerator
openblas = ["hodu_internal/openblas"]

# optional device
cuda = ["hodu_internal/cuda"]
metal = ["hodu_internal/metal"]

[dependencies]
hodu_internal = { workspace = true }
