[package]
name = "hodu-plugin-sdk"
version = "0.1.0"
description = "Plugin SDK for developing Hodu Backend and Format plugins"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"
documentation = "https://docs.rs/hodu-plugin-sdk"
readme = "README.md"

[dependencies]
hodu_core = { workspace = true, features = ["serde", "f8e5m2", "f64", "u16", "u64", "i16", "i64"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
