[package]
name = "hodu-plugin-sdk"
version = "0.1.0"
description = "SDK for building Hodu ML toolkit plugins"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"
documentation = "https://docs.rs/hodu-plugin-sdk"
readme = "README.md"
keywords = ["plugin", "sdk", "machine-learning", "hodu"]
categories = ["development-tools", "science"]

[[bin]]
name = "cargo-hodu-plugin-sdk"
path = "src/bin/cargo-hodu-plugin-sdk.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
hodu_core = { workspace = true, features = ["serde", "f8e5m2", "f64", "u16", "u64", "i16", "i64"] }
hodu_plugin = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
