[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "burn"
path = "_burn.rs"

[[bin]]
name = "candle"
path = "_candle.rs"

[[bin]]
name = "hodu"
path = "_hodu.rs"

[dependencies]
candle-core = "0.9.1"
hodu = { path = "../../", version = "0.1.8" }
burn = "0.18.0"
burn-ndarray = "0.16.0"
burn-wgpu = { version = "0.16.0", optional = true }
burn-tch = { version = "0.18.0", optional = true }

[features]
default = []
metal = ["candle-core/metal", "hodu/metal"]
cuda = ["burn-tch", "candle-core/cuda"]
xla = ["hodu/xla"]
wgpu = ["burn-wgpu"]
