[package]
name = "benchmark-matmul"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "burn"
path = "_burn.rs"

[[bin]]
name = "candle"
path = "_candle.rs"

[[bin]]
name = "hodu"
path = "_hodu.rs"
required-features = ["hodu-bench"]

[dependencies]
burn = "0.19.0"
burn-ndarray = "0.19.0"
burn-tch = { version = "0.19.0", optional = true }
burn-wgpu = { version = "0.19.0", optional = true }
candle-core = "0.9.1"
hodu = { path = "../../", version = "0.2.1", optional = true }

[features]
default = []
hodu-bench = ["hodu"]
metal = ["candle-core/metal", "hodu?/metal"]
cuda = ["burn-tch", "candle-core/cuda"]
xla = ["hodu?/xla"]
wgpu = ["burn-wgpu"]
