[package]
name = "hodu_core"
version = "0.2.1"
description = "hodu core"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]
std = [
    "dep:dashmap",
    "half/std",
    "hodu_cpu_kernels/std",
    "num-traits/std",
    "rand/std",
    "rand_distr/std",
    "serde?/std",
]
serde = ["dep:bincode", "dep:flate2", "dep:serde"]
rayon = ["std", "dep:rayon"]

# optional dtype
f8e5m2 = []
f64 = []
u16 =[]
u64 = []
i16 = []
i64 = []

# optional backend
cuda = []
# cuda = ["dep:hodu_cuda_kernels"]
metal = ["std", "dep:hodu_metal_kernels", "dep:objc2-foundation", "dep:objc2-metal", "dep:ug-metal"]

# optional compiler
xla = ["std", "dep:hodu_xla"]

[dependencies]
bincode = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
float8 = { workspace = true }
half = { workspace = true, default-features = false }
hodu_cpu_kernels = { path = "../hodu_cpu_kernels", version = "0.2.1" }
# hodu_cuda_kernels = { path = "../hodu_cuda_kernels", version = "0.2.1", optional = true }
hodu_metal_kernels = { path = "../hodu_metal_kernels", version = "0.2.1", optional = true }
hodu_xla = { workspace = true, optional = true }
num-traits = { workspace = true, default-features = false }
objc2-foundation = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
paste = { workspace = true }
rand = { workspace = true, default-features = false }
rand_distr = { workspace = true, default-features = false }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
spin = { workspace = true }
ug = { workspace = true }
ug-metal = { workspace = true, optional = true }
