[package]
name = "hodu_cuda_kernels"
version = "0.2.2"
description = "hodu cuda kernels"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]
default = ["cudarc/no-std", "float8/cuda"]
std = ["cudarc/std", "float8/cuda"]

[dependencies]
cudarc = { workspace = true }
float8 = { workspace = true }
half = { workspace = true, default-features = false }
paste = { workspace = true }
spin = { workspace = true }
