[package]
name = "hodu_datasets"
version = "0.2.4"
description = "hodu datasets"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"

[features]
serde = ["hodu_core/serde"]

[dependencies]
hodu_core = { workspace = true }
hodu_datasets_macros = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rand_distr = { workspace = true }
