[package]
name = "hodu_format"
version = "0.2.4"
description = "Model format support for Hodu (hdss, onnx, safetensors, gguf, pytorch)"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]
default = ["std", "hdss", "hdt"]

std = ["hodu_compat/std", "hodu_core?/std", "serde_json?/std"]

# Graph format
hdss = ["dep:hodu_core", "hodu_core/serde"]
onnx = []
gguf = []
pytorch = []

# Tensor format
hdt = ["dep:hodu_core", "hodu_core/serde", "dep:postcard", "dep:serde"]
json = ["dep:hodu_core", "hodu_core/serde", "dep:serde_json", "dep:float8", "dep:half"]
safetensors = []
npy = []

# DType features (forwarded to hodu_core)
f8e5m2 = ["hodu_core?/f8e5m2"]
f64 = ["hodu_core?/f64"]
u16 = ["hodu_core?/u16"]
u64 = ["hodu_core?/u64"]
i16 = ["hodu_core?/i16"]
i64 = ["hodu_core?/i64"]

[dependencies]
float8 = { workspace = true, optional = true }
half = { workspace = true, optional = true }
hodu_compat = { workspace = true }
hodu_core = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
