[package]
name = "hodu_internal"
version = "0.1.9"
description = "hodu internal"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]
std = ["hodu_core/std", "hodu_nn/std", "hodu_utils/std"]
serde = ["hodu_core/serde", "hodu_nn/serde", "hodu_utils/serde"]
rayon = ["std", "hodu_core/rayon"]

cuda = ["hodu_core/cuda"]
metal = ["hodu_core/metal"]

xla = ["std", "hodu_core/xla"]

[dependencies]
hodu_core = { path = "../hodu_core", version = "0.1.9" }
hodu_nn = { path = "../hodu_nn", version = "0.1.9" }
hodu_utils = { path = "../hodu_utils", version = "0.1.9" }
