[package]
name = "hodu_internal"
version = "0.2.4"
description = "hodu internal"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]
std = ["hodu_core/std", "hodu_nn/std", "hodu_utils/std"]
serde = ["hodu_core/serde", "hodu_nn/serde", "hodu_utils/serde"]

f8e5m2 = ["hodu_core/f8e5m2"]
f64 = ["hodu_core/f64"]
u16 = ["hodu_core/u16"]
u64 = ["hodu_core/u64"]
i16 = ["hodu_core/i16"]
i64 = ["hodu_core/i64"]

# optional cpu accelerator
openblas = ["hodu_core/openblas"]

# optional device
cuda = ["hodu_core/cuda"]
metal = ["hodu_core/metal"]

[dependencies]
hodu_core = { workspace = true }
hodu_nn = { workspace = true }
hodu_utils = { workspace = true }
