[package]
name = "hodu_macro_utils"
version = "0.2.2"
description = "hodu macro utils"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
toml_edit = { version = "0.23.6", default-features = false, features = [
    "parse",
] }
