[package]
name = "hodu_metal_kernels"
version = "0.1.0-dev"
description = "hodu metal kernels"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]

[dependencies]
half = { workspace = true, default-features = false }
objc2-metal = "0.3.2"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
