[package]
name = "hodu_metal_kernels"
version = "0.2.2"
description = "hodu metal kernels"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]

[dependencies]
half = { workspace = true, default-features = false }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }
