[package]
name = "hodu_nn"
version = "0.1.4"
description = "hodu nn"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]
std = ["hodu_core/std"]
serde = ["hodu_core/serde"]

[dependencies]
hodu_core = { path = "../hodu_core", version = "0.1.4" }
hodu_nn_macros = { path = "macros", version = "0.1.4" }
