[package]
name = "hodu_nn"
version = "0.3.0"
description = "hodu nn"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"

[features]
serde = ["hodu_core/serde"]

[dependencies]
hodu_core = { workspace = true }
hodu_nn_macros = { workspace = true }
