[package]
name = "hodu_onnx"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ONNX model loader for Hodu"
repository = "https://github.com/daminstudio/hodu"

[dependencies]
hodu_core = { path = "../hodu_core", features = ["std", "serde"] }
prost = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"
protobuf-src = "2.1.1"

[features]
default = []
