[package]
name = "hodu_plugin"
version = "0.3.0"
description = "Hodu plugin protocol types"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
