[package]
name = "hodu_plugin_runtime"
version = "0.1.0"
description = "Hodu plugin runtime - loading and executing plugins"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"

[features]
default = ["format", "backend"]
format = []
backend = []

[dependencies]
hodu_plugin = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
