[package]
name = "hodu_utils"
version = "0.2.1"
description = "hodu utils"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[features]
std = ["hodu_core/std", "rand/std", "rand_distr/std"]
serde = ["hodu_core/serde"]

[dependencies]
hodu_core = { path = "../hodu_core", version = "0.2.1" }
hodu_utils_macros = { path = "macros", version = "0.2.1" }
rand = { workspace = true, default-features = false, features = ["small_rng"] }
rand_distr = { workspace = true, default-features = false }
