[package]
name = "hodu-compiler-cpu"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "CPU compiler plugin for Hodu (generates C code, compiles with clang)"
repository = "https://github.com/daminstudio/hodu"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hodu_plugin = { path = "../../crates/hodu_plugin" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
cc = "1.2.48"
