[package]
name = "hodu-compiler-metal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Metal compiler plugin for Hodu"
repository = "https://github.com/daminstudio/hodu"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hodu_plugin = { path = "../../crates/hodu_plugin" }
hodu_core = { path = "../../crates/hodu_core", features = ["std", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_bytes = "0.11.19"

[features]
default = []
