[package]
name = "hodu-runtime-cpu"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "CPU runtime plugin for Hodu (executes compiled shared libraries)"
repository = "https://github.com/daminstudio/hodu"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hodu_plugin = { path = "../../crates/hodu_plugin" }
hodu_core = { path = "../../crates/hodu_core", features = ["std", "serde"] }
libloading = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
