[package]
name = "hodu_datasets_macros"
version = "0.2.4"
description = "hodu datasets macros"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/hodu-rs/hodu"

[lib]
proc-macro = true

[features]
serde = []

[dependencies]
hodu_macro_utils = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
